# corgi

./: Cargo.toml
cli/: Cargo.toml
gtk/: Cargo.toml
