[package]
name = "corgi_gtk"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7", features = ["v3_16"] }
gio = { version = "", features = ["v2_44"] }